@@ -1,0 +1,148 @@
+package com.planet_ink.coffee_mud.Abilities.Misc;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Abilities.StdAbility;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2016-2016 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
+
+public class BadReputation extends StdAbility
+{
+	@Override
+	public String ID()
+	{
+		return "BadReputation";
+	}
+
+	private final static String	localizedName	= CMLib.lang().L("Bad Reputation");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	@Override
+	public String displayText()
+	{
+		return "";
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return CAN_MOBS;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return 0;
+	}
+
+	@Override
+	public int abstractQuality()
+	{
+		return Ability.QUALITY_OK_SELF;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_SKILL|Ability.DOMAIN_INFLUENTIAL;
+	}
+
+	@Override
+	public boolean isAutoInvoked()
+	{
+		return true;
+	}
+
+	@Override
+	public boolean canBeUninvoked()
+	{
+		return false;
+	}
+
+	double changePct = 0.45;
+	
+	@Override
+	public void setMiscText(String newMiscText)
+	{
+		super.setMiscText(newMiscText);
+		if((newMiscText.length()>0)&&(CMath.isPct(newMiscText)))
+		{
+			changePct = CMath.s_pct(newMiscText);
+		}
+	}
+	
+	@Override
+	public boolean tick(Tickable ticking, int tickID)
+	{
+		if(!super.tick(ticking,tickID))
+			return false;
+		return true;
+	}
+
+	@Override
+	public boolean okMessage(Environmental host, CMMsg msg)
+	{
+		if(affected instanceof MOB)
+		{
+		}
+		return true;
+	}
+
+	@Override
+	public void executeMsg(final Environmental myHost, final CMMsg msg)
+	{
+		if(affected instanceof MOB)
+		{
+			if((msg.source()==affected)
+			&&(msg.sourceMinor()== CMMsg.TYP_FACTIONCHANGE)
+			&&(msg.othersMessage()!=null)
+			&&(msg.value()>0)
+			&&(msg.value()<Integer.MAX_VALUE)
+			&&(CMLib.factions().getFaction(msg.othersMessage())!=null))
+			{
+				double prof;
+				if((invoker()!=affected)&&(canBeUninvoked()))
+					prof=super.getXLEVELLevel(invoker());
+				else
+					prof = 0.0;
+				msg.setValue((int)Math.round(msg.value() * (changePct + (prof*0.05))));
+			}
+			super.executeMsg(myHost, msg);
+		}
+		super.executeMsg(myHost,msg);
+	}
+}
