@@ -28,6 +28,17 @@ Example    : STRAWBERRIES DWARF\n\r\
 Description: \n\r\
 This ability governs allergies.
 
+BAD_REPUTATION=BADREPUTATION
+BADREPUTATION=<ABILITY>\
+Property   : Bad Reputation\n\r\
+Affects    : Mobs\n\r\
+Parameters : Percentage of faction gain\n\r\
+Example    : 45%\n\r\
+Description: \n\r\
+The character is of such a poorly received race that others are much less \
+forgiving of historical events and unlikely to accept them into society.  \
+Faction changes happen much more slowly.
+
 AUTOSTACK=\
 Property   : Autostack\n\r\
 Targets    : Rooms, Areas\n\r\
