@@ -350,6 +350,10 @@ using the scan parameter. \
 The raw cloth for costuming is found using the Butchering, Shearing, or Foraging \
 skills.
 
+DILIGENT_STUDYING=DILIGENTSTUDYING
+DILIGENTSTUDYING=<ABILITY>\
+This character  is adept at learning, and gains an additional practice point every level.
+
 DISTILL=DISTILLING
 DISTILLING=<ABILITY>\
 Usage    : DISTILL LIST/[BREWING CONTAINER]\n\r\
