@@ -1346,6 +1346,12 @@ Gas attacks, Acid burns, Cold chills, Undead magic, Water blasts, Diseases, \
 Poisons, Electric burns, Paralysis, Mind influences, and Traps can all be \
 saved from.
 
+BAD_REPUTATION=BADREPUTATION
+BADREPUTATION=<ABILITY>\
+The character is of such a poorly received race that others are much less \
+forgiving of historical events and unlikely to accept them into society.  \
+Faction changes happen much more slowly.
+
 AUTOSAC=Sacrifice is a Clerical prayer, along with its evil counterpart \
 Desecrate, and the neutral version Bury.  
 
